tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__AcetoneandEtheno-AAAAAAAAAAAAAAAAAAALvg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3006,
  "prerequisites": [
    3003
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another ingredient in the making of TNM is Ethenone, which can be made directly from Acetone. This one is a little more organic, which is to say it's much easier to automate if you chose Benzene or Biomass. From those routes, you can get it from a Wood Vinegar DT, or reacting Acetic Acid with Calcite Dust from a Fermented Biomass DT (get the calcite from electrolyzing Fertilizer). If you used biomass to get Ammonia, you can do it this way.\n\nIf not using plants, though, there are other ways to automate this. Ethenone can be made directly from Acetic Acid and Sulfuric Acid, and this last one should already be automated from cleaning the sulfuric waste from the oil fractions. Acetic Acid, on the other hand, is a mix of Oxygen and Ethylene, a combo that you might have already automated to make Polyethylene. If not, this is a good time to do so.\n\nThe amount of Ethenone you need to make a lot of Cetane-Boosted Diesel is small, so it's unlikely that you'll run out of Sulfuric Acid for this. Make sure you automate it all, though.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Acetone and Ethenone",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3003
  ],
  "rewards": [],
  "tasks": []
}
