tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__BasicCracking-AAAAAAAAAAAAAAAAAAALsQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2993,
  "prerequisites": [
    2991
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Despite what the Distillery recipe might have led you to believe, there are many more fractions of Oil than the four you could choose from. However, to get the rest of the oil byproducts, you need to split these four into the others, a process known as cracking. To crack the fuels, they must not be sulfuric, and you will need either Hydrogen (hydro-cracking) or Steam (steam-cracking) to successfully crack. Your Hydrogen source for desulfurizing is hopefully good enough to sustain hydro-cracking, and the Steam you were previously using for power can now be useful to get more out of the Oil you're pumping.\n\nHeavy Fuel, Light Fuel, Refinery Gas and Naphtha can each be cracked both ways, and with three different intensities: lightly, moderately or severely cracked. This means that each portion has 6 different cracking options, and the products of distilling them can be cracked once more! There are a lot of options here, but a few of them stand out for their usefulness.\n\nThe first one you should try is Refinery Gas. In order to make that, you will need to desulfurize Sulfuric Gas, so make some of that in your Distillery. Currently, you can only crack through the Chemical Reactor, so once you have the Refinery Gas grab some steam and get cracking.\n\n*Hint* You should start by making some Severely-Cracked Refinery Gas\n\n[note]Make x5 as many cells if you don't want to waste anything.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Basic Cracking",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2991
  ],
  "rewards": [],
  "tasks": []
}
