tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__BoilerandSuperFu-AAAAAAAAAAAAAAAAAAALww==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3011,
  "prerequisites": [
    2990
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the advancements in building materials you've made until now, a new kind of generator has been unlocked. The Large Boilers you might have looked at before, and perhaps used, change when you reach Titanium, and if you build one of those, you will get something quite different from the tiers before.\n\nTo start, most burnable items don't work here. These advanced boilers need to burn much hotter, and as such they only accept specific fuels. The fuel of interest here is one of two, who are built in a sort of chain, in a similar fashion as to how Diesel and CBD worked. There is Solid Super Fuel, and Magic Solid Super Fuel, and they are both created from some coal-like block, some binder and some liquid fuel. You can use CBD for this, but Heavy Fuel and LPG are also options.\n\nWhy go through this route, though? The answer is that this extra processing, although it is difficult to automate, creates fuel that is much more efficient than the fuels that were put into it, and this is because the advanced Large Boilers are slow burners that output Superheated Steam, instead of regular one. This also means that they will need two turbines to convert all the steam into EU, and even more if the amount produced is too much for them. If fuel efficiency is something you're looking for, you can tackle this challenge and further process your CBD into something even more powerful.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Boiler and Super Fuel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2990
  ],
  "rewards": [],
  "tasks": []
}
