tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__BufferedDynamo-AAAAAAAAAAAAAAAAAAALzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3021,
  "prerequisites": [
    3020
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another use for a few stacks of Tungstensteel is a new, even more powerful generator, but you can't run it just yet. Just like the LCE before it, the IV generator can't be run without a dynamo hatch that is powerful enough to keep up with the output, and in this case it applies to both the boosted and unboosted modes.\n\nWhat that means is that you need an IV Buffered Dynamo Hatch. The power will be worth it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Buffered Dynamo",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3020
  ],
  "rewards": [],
  "tasks": []
}
