tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__CetaneBoostedDie-AAAAAAAAAAAAAAAAAAALwQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3009,
  "prerequisites": [
    3008
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you made it here, then you should be ready to make Cetane-Boosted Diesel flow into your generators by itself. Congratulations!\n\nOil is still the best power option in HV, building up from what you used in LV. This CBD you've made will help fuel your EBFs, get into space and then handle the increased power needs that EV will throw at you, especially if you want to make an AE2 network for quick automation. Your singleblock generators are at the lowest efficiency yet, 85%, but the fuel you use now has a fuel value of 1 million EU per bucket, a very powerful liquid compared to any other you could make at this time.\n\nI'll see you on EV. Good luck when you make it there.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cetane-Boosted Diesel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3008
  ],
  "rewards": [],
  "tasks": []
}
