tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__DistillationTowe-AAAAAAAAAAAAAAAAAAALrA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2988,
  "prerequisites": [
    160,
    546
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In HV, your oil processing options soar to new levels of complexity, and efficiency. Many of the processing multis that can be used are unlocked in this tier, and one of the most iconic is the Distillation Tower, the direct upgrade of the Distillery.\n\nThis tower can do actual fractional distillation, a process used in real life petrochemistry to separate oil into many different parts, based on their boiling points. The tall structure is required for the process, because the condensation of the vapors occurs in different temperatures. And since heating is only applied at the bottom, temperature drops the higher the vapor travels. This means that compounds with higher boiling points will condense sooner and will end up lower in the column, the opposite is also applicable for compounds with low boiling points.\n\nThat said, the Distillation Tower replaces Distilleries by allowing you to collect all fractions at once, from the same amount of input. This means that the tower is both more efficient, and also allows automation of all the outputs at the same time, but this comes at a cost: the controller needs EV circuits, which require a built Cleanroom, and the structure blocks are mostly made of Stainless Steel. Not only that, but the tower's height depends on the recipe, since each output needs its own height level to successfully be extracted. A max-height, 12-block tall DT can cost almost a dozen stacks of stainless to build, a very expensive multi for the tier.\n\nInstead of doing that, the first DT you should build is a 5-block tall one, to distill the Oil you're pumping out of reservoirs. Doing this, you can get all the fractions at once, for a reasonably cheap multi, compared to its maximum size.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Distillation Tower",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    546
  ],
  "rewards": [],
  "tasks": []
}
